Logging added, missing page conversions are handled